cmake_minimum_required(VERSION 3.8)
project(Memory)

set(CMAKE_CXX_STANDARD 11)

#set(SOURCE_FILES dynamicMem.cpp)
#set(SOURCE_FILES testStrClass.cpp myString.cpp myString.h)
#set(SOURCE_FILES exception1.cpp)
#set(SOURCE_FILES distanceException.cpp Distance.cpp Distance.h Person.cpp Person.h)
#set(SOURCE_FILES dynamicIntArray.cpp)
#set(SOURCE_FILES Const.cpp Person.cpp Person.h)
#set(SOURCE_FILES FreeStore.cpp Resource.cpp Resource.h)
#set(SOURCE_FILES memory.cpp Person.cpp Person.h Resource.cpp Resource.h max.cpp bankAccount.cpp bankAccount.h accum.h)
#set(SOURCE_FILES max.cpp)
set(SOURCE_FILES accum.h accumulator.cpp)
add_executable(Memory ${SOURCE_FILES})